# Biotry

./: .gitignore  README.md  index.html  package-lock.json  package.json  pitch_deck.html  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
contract/: Anchor.toml  Cargo.toml
contract/programs/bio_dao/: Cargo.toml
contract/programs/bio_dao/src/: lib.rs
hype-video/: generate-assets.js  package-lock.json  package.json  tsconfig.json
hype-video/src/: BiotryHype.tsx  Root.tsx  logoData.ts
server/: package-lock.json  package.json
server/prisma/: schema.prisma  seed.ts
server/scripts/: cleanup_database.ts
server/src/: db.ts  index.ts
server/src/lib/: agentWallet.ts
server/src/middleware/: x402.ts
server/src/routes/: metadata.ts  posts.ts  tapestry.ts  tapestry_v2.ts
src/: App.tsx  index.css  main.tsx
src/components/: DeSciDashboard.tsx  InputModal.tsx  JournalView.tsx  LandingPage.tsx  Layout.tsx  PostCard.tsx  PostDetail.tsx  ProfileView.tsx  ResearchEditor.tsx  SystemModal.tsx  TransactionModal.tsx
src/components/profile/: ActivityHistory.tsx  ProfileHero.tsx
src/components/providers/: SocialProviders.tsx
src/constants/: mockData.ts
src/context/: AppContext.tsx  SolanaContext.tsx  UIContext.tsx  useSolana.ts
src/hooks/: useTapestryReputation.ts  useUmbra.ts
src/lib/: aiSimulator.ts  api.ts  bioProtocol.ts  bio_dao_idl.json  graphUtils.ts  mockData.ts  program.ts  tapestry.ts  umbraProtocol.ts
src/pages/: PrivacyHub.tsx  SimulatePage.tsx
src/types/: index.ts
src/utils/: address.ts  mock-coinbase-sdk.js  mock-snackbar.js
(+1 files in other folders)
